--- a/res/xml/config_center_statusbar.xml
+++ b/res/xml/config_center_statusbar.xml
@@ -30,7 +30,7 @@
         android:fragment="com.havoc.config.center.fragments.StatusbarLogo"
         android:title="@string/status_bar_logo_title"
         android:summary="@string/status_bar_logo_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <PreferenceCategory
         android:key="statusbar_gestures"
