--- a/res/xml/edge_light.xml
+++ b/res/xml/edge_light.xml
@@ -23,13 +23,13 @@
         android:key="ambient_light_pulse_for_all"
         android:title="@string/pulse_ambient_light_show_always_title"
         android:summary="@string/pulse_ambient_light_show_always_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <com.havoc.support.preferences.SystemSettingSwitchPreference
         android:key="ambient_notification_light_enabled"
         android:title="@string/ambient_notification_light_enabled_title"
         android:summary="@string/ambient_notification_light_enabled_summary"
-        android:defaultValue="true" />
+        android:defaultValue="false" />
 
     <com.havoc.support.preferences.SystemSettingSwitchPreference
         android:key="ambient_notification_light_hide_aod"
@@ -55,22 +55,22 @@
         android:title="@string/pulse_ambient_light_layout_title"
         android:entries="@array/pulse_ambient_light_layout_entries"
         android:entryValues="@array/pulse_ambient_light_layout_values"
-        android:defaultValue="0" />
+        android:defaultValue="1" />
 
-    <com.havoc.support.preferences.SystemSettingSeekBarPreference
+    <com.havoc.support.preferences.CustomSeekBarPreference
         android:key="ambient_notification_light_duration"
         android:title="@string/pulse_ambient_light_duration_title"
         android:max="5"
         settings:min="1"
-        android:defaultValue="2"
+        settings:defaultValue="2"
         settings:units="sec" />
 
-    <com.havoc.support.preferences.SystemSettingSeekBarPreference
+    <com.havoc.support.preferences.CustomSeekBarPreference
         android:key="ambient_notification_light_repeats"
         android:title="@string/pulse_ambient_light_repeat_count_title"
         android:max="10"
         settings:min="0"
-        android:defaultValue="3" />
+        settings:defaultValue="0" />
 
     <com.havoc.support.preferences.SystemSettingListPreference
         android:key="ambient_light_repeat_direction"
