--- a/res/values/maintainers_strings.xml
+++ b/res/values/maintainers_strings.xml
@@ -269,7 +269,7 @@
     <string name="device_markw_summary" translatable="false">markw\nShihabZzz</string>
 
     <string name="device_rolex" translatable="false">Xiaomi Redmi 4A</string>
-    <string name="device_rolex_summary" translatable="false">rolex\nMohamed Arshad (MArshadR)</string>
+    <string name="device_rolex_summary" translatable="false">rolex\nAryan Karan (aryan_karan)</string>
 
     <string name="device_santoni" translatable="false">Xiaomi Redmi 4X</string>
     <string name="device_santoni_summary" translatable="false">santoni\nGabriel Nogueira (XDDEATH69)</string>
@@ -287,7 +287,7 @@
     <string name="device_sakura_summary" translatable="false">sakura\nTushar Mahajan (mahajant99)</string>
 
     <string name="device_onclite" translatable="false">Xiaomi Redmi 7</string>
-    <string name="device_onclite_summary" translatable="false">onclite\nAryan Karan (aryan_karan_2004)</string>
+    <string name="device_onclite_summary" translatable="false">onclite\nAryan Karan (aryan_karan)</string>
 
     <string name="device_juice" translatable="false">Xiaomi Redmi 9T/Note 9 4G/9 Power/Poco M3 [Unified]</string>
     <string name="device_juice_summary" translatable="false">juice\nJoaquin Guzman (Joaquin#Citrus)</string>
